--- a/eudevfin/dim/pom.xml
+++ b/eudevfin/dim/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>org.devgateway.eudevfin</groupId>
         <artifactId>eudevfin</artifactId>
-       <version>1.5.1</version>
+       <version>1.5.1-SNAPSHOT</version>
     </parent>
     <artifactId>dim</artifactId>
     <packaging>war</packaging>
