--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.devgateway.eudevfin</groupId>
 		<artifactId>eudevfin</artifactId>
-		<version>1.5.1</version>
+		<version>1.5.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>import-metadata</artifactId>
 	<name>EU-DEVFIN Importing Of Metadata</name>
