--- a/eudevfin/mcm/pom.xml
+++ b/eudevfin/mcm/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>eudevfin</artifactId>
-   <version>1.5.1</version>
+   <version>1.5.1-SNAPSHOT</version>
   </parent>
   <artifactId>mcm</artifactId>
   <packaging>war</packaging>
