--- a/eudevfin/projects-module/pom.xml
+++ b/eudevfin/projects-module/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.devgateway.eudevfin</groupId>
         <artifactId>eudevfin</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.1-SNAPSHOT</version>
     </parent>
     <artifactId>projects-module</artifactId>
     <packaging>war</packaging>
@@ -43,11 +43,7 @@
             <artifactId>inmethod-grid</artifactId>
             <version>1.5-RC5.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.devgateway.eudevfin</groupId>
-            <artifactId>common-exchange</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+        
         <dependency>
             <groupId>org.devgateway.eudevfin</groupId>
             <artifactId>common-projects</artifactId>
@@ -56,6 +52,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>financial</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>common-financial</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
