--- a/eudevfin/reports-core/pom.xml
+++ b/eudevfin/reports-core/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.devgateway.eudevfin</groupId>
         <artifactId>eudevfin</artifactId>
-       <version>1.5.1</version>
+       <version>1.5.1-SNAPSHOT</version>
     </parent>
     <artifactId>reports-core</artifactId>
     <packaging>jar</packaging>
